<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Lights Out</string>

    <string name="how_to_play">How to Play</string>
    <string name="level_select">Level Select</string>
    <string name="how_to_play_description">Click a tile to switch it on/off. All adjacent tiles will also switch on/off. Turn off all the lights in as few clicks as possible.</string>
    <string name="lets_play">Let\'s Play!</string>

    <string name="level_min">1</string>
    <string name="level_max">10</string>
    <string name="onLightsOnly">On Lights Only</string>
    <string name="timer">Timer</string>

    <string name="minText">Min: %1$s</string>
    <string name="clicksText">Clicks: %1$d</string>
    <string name="boardTitle">%1$d x %1$d</string>
    <string name="timerZero">%1$d x %1$d - 00:00</string>
    <string name="newScramble">New Scramble</string>
    <string name="youWon">You Won!</string>
</resources>
