<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.game.lightsout.LevelSelect">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_select"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level_min"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level_max"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/levelSelectSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:max="9" />

        <TextView
            android:id="@+id/barProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:textAlignment="center"
            android:layout_marginTop="-50dp"
            android:padding="0dp"
            android:textColor="@color/colorAccent"
            android:textSize="300sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10sp"
            android:layout_margin="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/onLightsOnly"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/onLightsOnlySwitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:gravity="start" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/timer"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/timerSwitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/levelSelectButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:minHeight="100dp"
                android:text="@string/lets_play"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="60sp" />
        </RelativeLayout>
    </LinearLayout>
</android.widget.RelativeLayout>