<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.game.lightsout.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="120sp" />

    <TableLayout
        android:id="@+id/titleButtonsTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleText"
        android:stretchColumns="*">

        <TableRow android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/levelSelectButton"
                android:layout_height="75dp"
                android:background="@color/colorAccent"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/level_select"
                android:textColor="@color/white"
                android:textSize="48sp" />
        </TableRow>

        <TableRow android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/howToPlayButton"
                android:layout_height="75dp"
                android:background="@color/colorAccent"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/how_to_play"
                android:textColor="@color/white"
                android:textSize="48sp" />
        </TableRow>
    </TableLayout>
</android.widget.RelativeLayout>